# api-news-soccer

./: .gitignore  Request.yaml  connection.py  db.py  docker-compose.yml  dockerfile  entrypoint.sh  main.py  model.py  pyproject.toml  requirements.txt  runtime.txt
.github/workflows/: ci.yml
app/: main.py
app/config/: settings.py
app/controller/: news.py
app/model/: news.py
app/resource/: news.py
app/schema/common/: error.py  news.py
app/schema/input/: news.py
app/schema/output/: news.py
