[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = ["ThaisPerlho <carvalho.thais0301@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
