[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = ["ThaisPerlho <carvalho.thais0301@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"
gunicorn = "^20.1.0"
guvicorn-logger = "^0.1.13"
asgi-correlation-id = "^3.2.1"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
